# wavewall

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  temp  thoughts.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7vb9ksc4fa8yfiha46mr0mgp0zdhh5nf-source  dyzl40h25l04565n90psbhzgnc5vp2xr-source  v3bqgdxnmkacmn5mv8rqichar52gr6sz-source
.github/workflows/: docs.yml
docs/: index.md  introduction.md
docs/.vitepress/: config.mts
docs/commands/: colors.md  template.md
docs/configuration/: colorizer.md  output.md  tileset.md
docs/lua/: guide.md  provided_functions.md
docs/other/: pseudotiles.md  recipes.md
docs/tileset/: colorizer.md  info.md  pseudotiles.md  recipes.md  selection.md
docs/userdata/: anchor.md  colorinfo.md  pixelinfo.md  placerinfo.md
docs/wavewall/: generation.md  output.md
src/: commands.rs  error.rs  lib.rs  lualib.rs  main.rs  runtime.rs  user_data.rs  util.rs
src/cli/: mod.rs  subcommands.rs
src/config/: colorizer.rs  error.rs  gradient.rs  kdl_util.rs  location.rs  mod.rs  output.rs  parse.rs
src/config/app/: generation.rs  mod.rs
src/config/app/output/: mod.rs  size.rs
src/config/colorizer/: converter.rs  mod.rs
src/config/generation/: mod.rs  offset.rs  tileset.rs
src/config/output/: mod.rs  size.rs
src/config/tileset/: info.rs  mod.rs  pseudotiles.rs  recipes.rs
src/config/tileset/recipes/: mod.rs  tiles.rs
src/image/: mod.rs  pixel.rs  pixel_info.rs  transform.rs
src/parse/: error.rs  generation.rs  mod.rs  output.rs
src/result/: mod.rs
src/runtime/: mod.rs  tile.rs
src/tileset/: mod.rs  tile.rs  tsruntime.rs
src/tileset/tsconfig/: colorizer.rs  info.rs  mod.rs  pseudotiles.rs  recipe.rs
src/user_data/: mod.rs
tilesets/: README.md
tilesets/letters/: tileset.lua
tilesets/testing/: tileset.lua
(+4 files in other folders)
