[package]
name = "wavewall"
version = "0.3.0"
edition = "2024"
description = "A tiling wallpaper generator"
documentation = "https://rohrsben.github.io/wavewall"
repository = "https://github.com/rohrsben/wavewall"
license = "MIT"
keywords = ["wallpaper", "aesthetics"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["/docs", "thoughts.txt", "flake.nix", "flake.lock", ".github/", "package.json", "pnpm-lock.yaml"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
hex_color = "3.0.0"
infer = "0.19.0"
mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
png = "0.18.0"
rand = "0.9.2"
thiserror = "2.0.17"
